force-app/main/default/objects/Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>AppraisalCycle__c</fullName>
        <label>Appraisal Cycle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraiserComments__c</fullName>
        <label>Appraiser Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AppraiserFeedback__c</fullName>
        <label>Appraiser Feedback</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraiserName__c</fullName>
        <formula>EmployeeMaster__r.Appraiser__r.FirstName +&apos; &apos;+ EmployeeMaster__r.Appraiser__r.LastName</formula>
        <label>Appraiser Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppraiserRating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Appraiser Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApraiseeOverallRating__c</fullName>
        <label>Apraisee Overall Rating</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ClosureComments__c</fullName>
        <label>Closure Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConflictFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflict Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EligibilityForPromotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligibility For Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Master</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeedbackComments__c</fullName>
        <label>Feedback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FeedbackProvidedDate__c</fullName>
        <label>Feedback Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeedbackProvider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations (Feedback Provider)</relationshipLabel>
        <relationshipName>Evaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedbackRating__c</fullName>
        <label>Feedback Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FeedbackRequest__c</fullName>
        <description>details of the feedback request.</description>
        <label>Feedback Request</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Date__c</fullName>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Request_Reason__c</fullName>
        <label>Feedback Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Completion</fullName>
                </value>
                <value>
                    <fullName>Task Completion</fullName>
                </value>
                <value>
                    <fullName>Moving out of Project</fullName>
                </value>
                <value>
                    <fullName>Adhoc Request</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feedback Requested</fullName>
                </value>
                <value>
                    <fullName>Feedback Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrievenceComment__c</fullName>
        <label>Grievence Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsAutoSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAutoSubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JustificationForEligibility__c</fullName>
        <label>Justification For Eligibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>EmployeeMaster__r.FirstName &amp; &quot;-&quot; &amp;  RecordType.Name &amp; &quot;-&quot;&amp;TEXT(Feedback_Date__c)&amp; &quot;-&quot;&amp;      FeedbackProvider__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallComments__c</fullName>
        <label>Overall Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OverallRating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overall Rating</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRDDateAndTime__c</fullName>
        <label>PRD Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRDDuration__c</fullName>
        <label>PRD Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRDWithAppraiserIsDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRD With Appraiser Is Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRD_Date_And_Time_Appraiser__c</fullName>
        <label>PRD Date And Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRD_Duration_Appraiser__c</fullName>
        <label>PRD Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRD_With_Appraisee_Is_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRD With Appraisee Is Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>Project Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestReason__c</fullName>
        <label>Request Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Comments__c</fullName>
        <label>Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations (Requester Name)</relationshipLabel>
        <relationshipName>Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewerFeedback__c</fullName>
        <label>Reviewer Feedback</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerName__c</fullName>
        <formula>EmployeeMaster__r.Reviewer__r.FirstName +&apos; &apos;+ EmployeeMaster__r.Reviewer__r.LastName</formula>
        <label>Reviewer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewerRating__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reviewer Rating</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Not Initiated</fullName>
                </value>
                <value>
                    <fullName>Pending with Reviewer</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Submitted by Appraiser</fullName>
                </value>
                <value>
                    <fullName>Final Rating Available</fullName>
                </value>
                <value>
                    <fullName>Grievance Raised</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Auto Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WhatCanBeDoneBetter__c</fullName>
        <label>What Can Be Done Better/Improvement Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatHappenedWell__c</fullName>
        <label>What Happened Well</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>AppraisalCycle__c</columns>
        <columns>EmployeeMaster__c</columns>
        <columns>End_Date__c</columns>
        <columns>AppraiserFeedback__c</columns>
        <columns>JustificationForEligibility__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Evaluation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evaluations</pluralLabel>
    <recordTypes>
        <fullName>Appraisal_Form</fullName>
        <active>true</active>
        <label>Appraisal Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feedback_Form</fullName>
        <active>true</active>
        <label>Feedback Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>